--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline (Self-Hosted)
 
 on:
   push:
@@ -6,41 +6,23 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Run tests
+    - name: Run placeholder tests
       run: |
         echo "Running placeholder tests..."
         echo "No tests defined. Skipping."
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Build Docker image
+      run: |
+        docker build -t test-app:latest .
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: kkagb/test-app:latest
-
-    - name: Deploy to staging via SSH
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.STAGING_HOST }}
-        username: ${{ secrets.STAGING_USER }}
-        key: ${{ secrets.STAGING_SSH_KEY }}
-        script: |
-          docker pull kkagb/test-app:latest
-          docker stop app || true
-          docker rm app || true
-          docker run -d --name app -p 80:80 kkagb/test-app:latest
+    - name: Deploy locally
+      run: |
+        docker stop app || true
+        docker rm app || true
+        docker run -d --name app -p 80:80 test-app:latest
